[package]
name = "jsonc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
jsonc-string-opt = { path = "crates/jsonc-string-opt" }
jsonc-mlir = { path = "crates/jsonc-mlir" }
jsonc-object-opt = { path = "crates/jsonc-object-opt" }
jsonc-value-opt = { path = "crates/jsonc-value-opt" }
jsonc-bytecode = { path = "crates/jsonc-bytecode" }
jsonc-compiler = { path = "crates/jsonc-compiler" }
jsonc-encoder = { path = "crates/jsonc-encoder" }
jsonc-decoder = { path = "crates/jsonc-decoder" }
clap = { version = "4.6.1", features = ["cargo"] }
clap-cargo = "0.18.3"

[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
